[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentflow"
version = "0.1.0"
description = "Agentic chatbot with CLI and Streamlit interfaces"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langgraph",
  "langchain-core",
  "langchain",
  "langchain-community",
  "langgraph-checkpoint-sqlite",
  "ddgs",
  "streamlit",
  "google-genai",
  "PyYAML",
]

[project.scripts]
agentflow = "agentflow.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agentflow*"]
